# voxara_AI_Customer_Service_Agent

./: RAG_DOCUMENTATION.md  README.md
backend/: Dockerfile  Dockerfile.agent  pyproject.toml  rag_context.json
backend/agent/: __init__.py  config.py  main.py  tools.py  voice_agent.py
backend/api/: main.py
backend/api/routes/: rag.py
backend/tests/: test_embeddings.py  test_qdrant.py
frontend/: next.config.ts
frontend/app/: page.tsx
frontend/components/voice-agent/: ContextPanel.tsx  ControlButtons.tsx  MagicSphere.tsx  TranscriptPanel.tsx  VoiceAgent.tsx  index.ts
